[package]
name = "cma-server"
version = "0.1.3"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.11"

testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
# testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.0.6" }
sal-sync = {git = "https://github.com/a-givertzman/rust-sal-sync.git"}

# num = "^0.4"
# derive-new = "^0.5"

serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"

regex = "^1.10"

rand = "^0.8"

chrono = "^0.4"

linked-hash-map = "^0.5"
indexmap = "^2.5"
hashers = "^1.0"

# snap7 = "^0.0"
snap7-sys = "^0.1"
libc = "^0.2"
libloading = "^0.8"
once_cell = "^1.19"

concat-string = "^1.0"
concat-in-place = "^1.1"

signal-hook = "^0.3"

strum = "^0.26"
strum_macros = "^0.26"

clap = { version = "^4.5", features = ["derive"] }

egui = "^0.28"
egui_plot = "^0.28"
egui_extras = "^0.28"
eframe = "^0.28"
winit = "^0.29"
hsl = "^0.1"

uid = "^0.1"

rustfft = "^6.2"

derivative = "^2.2"

plotters = "^0.3"

# [[bin]]
# name = "task_test"
# path = "src/task_test.rs"

[build-dependencies]
cc = "^1.1"